--- a/static/index.html
+++ b/static/index.html
@@ -7,6 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    <div>WAPO TRAKETERO</div>
+    <div>Weather Report</div>
+    <form method="GET" action="/clima">
+        <input type="text" name="dia">
+        <input type="submit">
+    </form>
 </body>
 </html>
